--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,3 +27,7 @@
   background-attachment: fixed;
   background-size: cover; */
 }
+
+.my-text {
+  @apply bg-gradient-to-r from-red-500 to-red-800 bg-clip-text text-transparent;
+}
