--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,7 +20,7 @@ body {
   @apply bg-gray-50 min-h-[100dvh];
 }
 .my-bg {
-  @apply bg-gradient-to-tr from-green-950 to-pink-950 h-[100dvh];
+  @apply bg-gradient-to-tr from-green-950 to-pink-950 min-h-[100dvh] md:h-[100dvh];
 }
 .bg-secondary {
   @apply bg-pink-100;
