--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -41,6 +41,10 @@ body {
 .my-tertiary-text {
   @apply bg-gradient-to-r from-gray-300 to-gray-200 bg-clip-text text-transparent;
 }
+
+.max-width {
+  max-width: 1600px;
+}
 .loader {
   position: relative;
   width: 75px;
