--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,11 +18,9 @@
 }
 html,
 body {
-  height: 100%;
+  min-height: 100%;
 }
-body {
-  @apply bg-gray-50 min-h-full;
-}
+
 .my-bg {
   @apply bg-gradient-to-tr from-green-950 to-pink-950;
 }
